# Chat_Server_

./: CMakeLists.txt  README.md
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/database/: db.h
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/database/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: Redis.cpp
